Prevented projects mouseover on mobile, header doesn't overflow the page on small viewport heights

--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -2,6 +2,7 @@ $hero-side-padding: 50px;
 $image-height: 800px;
 $overlay-color: rgba(20, 110, 255, 0.5);
 $project-header-color: #33C2FF;
+$mobile-header-height: 600px;
 
 .about {
   font-size: $base-font-size * 1.25;
@@ -28,6 +29,15 @@ $project-header-color: #33C2FF;
   height: 100%;
   color: $header-font-color;
   display: flex;
+}
+
+@media(max-height: 600px){
+  .hero-container {
+    height: $mobile-header-height;
+  }
+  .hero-overlay {
+    height: $mobile-header-height;
+  }
 }
 
 .hero-text {
@@ -121,7 +131,7 @@ $project-header-color: #33C2FF;
 
 .project {
   flex: 1 0 33%;
-  max-width: 50%;
+  min-width: 250px;
   align-self: flex-start;
   margin: 15px;
   position: relative;
